5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1712_2502.log
== SUBMITION (2019-05-13 15:23:16) 
-- CODE:
n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c)))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- EXECUTION TIME:
0.171261
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    if(aux == 1):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:24:01) 
-- CODE:
n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c)))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- EXECUTION TIME:
0.161239
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    if(aux == 1):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:24:39) 
-- CODE:
from math import*
n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c)))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- ERROR:
File "XXXX", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:24:44) 
-- CODE:
from math import*
n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c)))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- EXECUTION TIME:
0.122081
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:24:47) 
-- CODE:
from math import*

n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c)))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- EXECUTION TIME:
0.133625
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 12
    if(aux == 1):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:25:05) 
-- CODE:
from math import*

n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c)))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- EXECUTION TIME:
0.205783
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 12
    if(aux == 1):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:25:25) 
-- CODE:
from math import*

n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c))))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
				
e = e * sqrt(12)
print(round(e, 8))
	
-- EXECUTION TIME:
0.132989
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
